--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "formik": "^2.4.6",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.10",
     "generate-react-cli": "^9.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "yup": "^1.7.1"
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
